--- a/Tareas/index.html
+++ b/Tareas/index.html
@@ -31,8 +31,8 @@
             <article class="consulta">
                 <h3 class="tituloconsulta">Consultas</h3>
                 <ul class="ulconsulta">
-                    <li>Consulta 1</li>
-                    <li>Consulta 2</li>
+                    <li><a class="hojadevida" href="/Tareas/consultas/consulta1.html">Modelo DOM</a></li>
+                    <li><a href="/Tareas/consultas/consulta2.html">Landing Page</a></li>
                     <li>Consulta 3</li>
                     <li>Consulta 4</li>
                 </ul>
