--- a/Tareas/retos/catalogo.html
+++ b/Tareas/retos/catalogo.html
@@ -1,29 +1,109 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Catalogo tienda</title>
-    <link rel="stylesheet" href="/Tareas/css/stylecatalogo.css">
-</head>
-<body>
+    <link rel="stylesheet" href="/Tareas/css/stylecatalogo.css" />
+  </head>
+  <body>
     <section class="conteiner">
-        <div class="fila">
-            <div class="navbar">
-                <div class="marcanav">MARCA</div>
-                <div class="opcion">Navbar1</div>
-                <div class="opcion">Navbar2</div>
-                <div class="opcion">Navbar3</div>
-            </div>
+      <div class="fila">
+        <div class="navbar">
+          <div class="marcanav">MARCA</div>
+          <div class="opcion">boton1</div>
+          <div class="opcion">boton2</div>
+          <div class="opcion">boton3</div>
         </div>
-        <div class="fila">
-                <div class="tituloprod">TITULO DEL PRODUCTO</div>
-                <div class="botoncomprar">Comprar</div>
+      </div>
+      <div class="fila">
+        <div class="tituloprod">TITULO DEL CURSO</div>
+        <div class="botoncomprar">Comprar</div>
+      </div>
+      <div class="filastart">
+        <div class="calificacion">9/10</div>
+        <fieldset class="rating">
+          <input type="radio" id="star5" name="rating" value="5" /><label
+            class="full"
+            for="star5"
+            title="Awesome - 5 stars"
+          ></label>
+          <input
+            type="radio"
+            id="star4half"
+            name="rating"
+            value="4 and a half"
+          /><label
+            class="half"
+            for="star4half"
+            title="Pretty good - 4.5 stars"
+          ></label>
+          <input type="radio" id="star4" name="rating" value="4" /><label
+            class="full"
+            for="star4"
+            title="Pretty good - 4 stars"
+          ></label>
+          <input
+            type="radio"
+            id="star3half"
+            name="rating"
+            value="3 and a half"
+          /><label class="half" for="star3half" title="Meh - 3.5 stars"></label>
+          <input type="radio" id="star3" name="rating" value="3" /><label
+            class="full"
+            for="star3"
+            title="Meh - 3 stars"
+          ></label>
+          <input
+            type="radio"
+            id="star2half"
+            name="rating"
+            value="2 and a half"
+          /><label
+            class="half"
+            for="star2half"
+            title="Kinda bad - 2.5 stars"
+          ></label>
+          <input type="radio" id="star2" name="rating" value="2" /><label
+            class="full"
+            for="star2"
+            title="Kinda bad - 2 stars"
+          ></label>
+          <input
+            type="radio"
+            id="star1half"
+            name="rating"
+            value="1 and a half"
+          /><label class="half" for="star1half" title="Meh - 1.5 stars"></label>
+          <input type="radio" id="star1" name="rating" value="1" /><label
+            class="full"
+            for="star1"
+            title="Sucks big time - 1 star"
+          ></label>
+          <input type="radio" id="starhalf" name="rating" value="half" /><label
+            class="half"
+            for="starhalf"
+            title="Sucks big time - 0.5 stars"
+          ></label>
+        </fieldset>
+      </div>
+      <div class="fila">
+        <div class="videocurso">
+          <img src="/Tareas/imgs/curso.jpg" alt="cursoejemplo" />
         </div>
-        <div class="fila">
-            seccion para los productos
+        <div class="descripcion">
+          <h1>Descripcion:</h1>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae illum
+          quo enim assumenda. Saepe laborum veniam eaque assumenda facere vitae
+          omnis, et similique libero explicabo optio nihil minima placeat nobis
+          quae, eligendi qui odio ea modi a iure reprehenderit in.
         </div>
+        <div class="grafico">
+          
+            <img src="/Tareas/imgs/grafico.png" alt="grafico">
+          
+      </div>
     </section>
-</body>
+  </body>
 </html>
