--- a/Tareas/retos/catalogo.html
+++ b/Tareas/retos/catalogo.html
@@ -141,10 +141,10 @@
       </div>
       <div class="fila">
         <div id="ejemplocursos" class="videocurso">
-          <img src="/Tareas/imgs/curso.jpg" alt="cursoejemplo" />
-        </div>
+          <img class="imgcurso" src="/Tareas/imgs/curso.jpg" alt="cursoejemplo" />
+        </div><br>
         <div class="descripcion">
-          <h1>Descripcion:</h1>
+          <h2>Descripcion:</h2>
           <p>
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae illum
           quo enim assumenda. Saepe laborum veniam eaque assumenda facere vitae
@@ -156,6 +156,7 @@
             <img class="imggrafico" src="/Tareas/imgs/grafico.png" alt="grafico">
           
       </div>
+    </div>
 
       <div id="perfiles1" class="fila">
         <h1>Ejemplo de perfiles de profesores</h1>
