--- a/Tareas/talleres/hojadevida.html
+++ b/Tareas/talleres/hojadevida.html
@@ -11,7 +11,7 @@
     <section class="seccionprincipal">
         <main class="Main">
           <header class="Header">
-            <div class="foto"><img src="/Tareas/imgs/libreta.jpg" alt="fotito"></div>
+            <div class="foto"><img src="/Tareas/imgs/libreta.png" alt="fotito"></div>
             <div class="titulo">
               <div class="nombre">Jesus Jair Parra Jimenez</div>
               <div class="oficio">Técnico en desarrollo de software</div>
