--- a/Tareas/index.html
+++ b/Tareas/index.html
@@ -32,7 +32,7 @@
                 <div class="fila">
                     <ul class="ultaller">
                         <li><a class="hojadevida" href="/Tareas/talleres/hojadevida.html">Hoja de vida</a><span> - </span><span><a href="https://www.figma.com/file/99h0WteAmkxwGWEXDcRva0/Hoja-de-vida?node-id=0%3A1">Figma</a></span></li>
-                        <li>Taller 2</li>
+                        <li><a class="hojadevida" href="/Tareas/talleres/snackconferences.html">Snackconferences</a><span> - </span><span><a href="https://www.figma.com/file/XoJuDEUEB58WR6SnTIlMM8/Snackconferences?node-id=3%3A2">Figma</a></span></li>
                         <li>Taller 3</li>
                         <li>Taller 4</li>
                     </ul>
