--- a/Tareas/retos/APIFetch/fichaestudiante.html
+++ b/Tareas/retos/APIFetch/fichaestudiante.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +9,9 @@
     <title>Ficha de Estudiante usando API fetch</title>
 </head>
 <body>
-    <div id="contenido1" class="container1"></div>
+    <div id="contenido1" class="container1">
+
+    </div>
     
     <script src="/Tareas/retos/APIFetch/lista.js">
     </script>
