--- a/Tareas/index.html
+++ b/Tareas/index.html
@@ -62,7 +62,7 @@
                         <li><a class="sopadeletras" href="/Tareas/retos/sopadeletras.html">Sopa de letras</a></li>
                         <li><a class="sopadeletras" href="/Tareas/retos/flashcards.html">Flash Cards</a></li>
                         <li><a class="sopadeletras" href="/Tareas/retos/catalogo.html">Catalogo</a></li>
-                        <li>Reto 4</li>
+                        <li><a class="sopadeletras" href="/Tareas/retos/APIFetch/fichaestudiante.html">Ficha de estudiantes API</a></li>
                     </ul>
                 </div>
             </div>
